--- a/atividadeCSS/styles/style.css
+++ b/atividadeCSS/styles/style.css
@@ -27,6 +27,7 @@ body {
     margin: auto;   
 }
 
+
 .header .container {
     justify-content: space-between;
     align-items: center;
@@ -126,4 +127,63 @@ body {
 
 .version {
     font-size: 12px;
+}
+
+.card-login {
+    background-color: #e5e5e5;
+    padding: 0 80px 20px 80px;
+    width: 500px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center
+}
+
+.formulario {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 5px;
+    width: inherit;
+    gap: 20px;
+    color: #d96e94;
+    font-weight: 800;
+}
+
+.campo {
+    width: inherit;
+}
+
+.campo input {
+    width: inherit;
+    text-align: center;
+    border-radius: 10px;
+    padding: 8px 0 8px 0;
+    border: 2px solid #54b5c3;
+}
+
+button {
+    background-color: #ec145b;
+    border: none;
+    padding: 10px 40px 10px 40px;
+    font-weight: 800;
+    color: #fff;
+    border-radius: 10px;
+}
+
+h2 {
+    color: #d96e94;
+    font-weight: 800;
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+
+.card-cadastro {
+    background-color: #e5e5e5;
+    padding: 0 80px 20px 80px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
 }
